# upSkill

./: .gitlab-ci.yml  .replit  Pasted-Hypotheses-for-deployment-failure-Misconfigured-Kubernetes-resources-Issues-with-AWS-services-or-p-1729391723296.txt  README.md  app.py  auth.py  aws_infrastructure.md  celery_worker.py  check_google_oauth.py  check_redis_url.py  config.py  development_notes.txt  k8s-configmap.yaml  k8s-deployment.yaml  k8s-secrets-template.yaml  models.py  package-lock.json  package.json  pyproject.toml
api/: courses.py  skills.py  users.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js
frontend/src/components/: CourseList.js  Home.js  Login.js  SkillList.js  UserList.js
migrations/versions/: 3f9081c2bc3d_initial_migration.py
services/: course_service.py  skill_service.py  user_service.py
templates/: index.html
utils/: helpers.py  load_balancer.py  rate_limiter.py  rate_limiter_init.py
